# minerva

./: LICENSE  README.md  pyproject.toml  requirements.txt
example/: settings.toml
example/themes/minerva-default/assets/custom/css/: all.css
example/themes/minerva-default/templates/: 404.html.j2  base.html.j2  index.html.j2  list.html.j2  post.html.j2  search.html.j2
minerva/: constants.py  main.py
