[project]
name = "minerva"
description = "simple blog engine"
authors = [{ "name" = "Michaël PAULON", "email" = "michael@paulon.org" }]
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]

[project.scripts]
minerva = "minerva.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
dev = ["requirements-dev.txt"]

[tool.hatch.version]
path = "minerva/__version__.py"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
